# quantum-claw

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FILE_MAP.md  GITHUB_LAUNCH_SUCCESS.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  colab_wavlm_real_audio.ipynb  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
clients/: alexa_handler.js  alexa_handler_no_tmlpd.js  alexa_verifier.js  analytics.js  api_response_validator.js  arxiv_client.js  audio_hosting_service.js  bengali_detector_v2.js  bengali_language_fix.js  cache_manager.js  cerebras_client.js  chain_of_thought.js  config.js  conversation_context.js  conversation_manager.js  enhanced_language_detector.js  error_handler.js  followup_manager.js  gemini_client.js  glm_client.js  glm_client_fixed.js  google_translate_client.js  google_tts.js  google_tts_client.js  groq_client.js  home_automation_client.js  hybrid_tts_orchestrator.js  input_sanitizer.js  intent_orchestrator.js  intent_recognizer.js  kodi_client.js  logger.js  lru_cache.js  model_router.js  news_client.js  omniclaw_client.js  performance_monitor.js  performance_optimizer.js  perplexity_client.js  plex_client.js  (+26 more)
docs/: demo.md  github-preview.md
examples/: basic-usage.js
scripts/: daily-summary.sh  omniclaw-mac-api.js  omniclaw-simple-api.py  omniclaw.js  omniclaw_baileys.js  omniclaw_direct.js  omniclaw_direct_whatsapp.js  omniclaw_ws_listener.py  openclaw_bridge_enhanced.js  openclaw_browser_relay.py  openclaw_relay_final.py  (+5 more)
(+396 files in other folders)
