[project]
name = "omniclaw"
version = "1.0.0"
description = "Unified AI assistant platform with multi-channel support"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
